# libmpsse

./: CMakeLists.txt  README.md  libmpsse-config.in
cmake/: LibMPSSEConfig.cmake.in  UseLibMPSSE.cmake
docs/: INSTALL  README
src/: CMakeLists.txt  mpsse.c  mpsse.h  support.c
src/cmake_example/: CMakeLists.txt
src/examples/: CMakeLists.txt  spiflashfast.c
